# DAS_2020_DDHCB_Production_Code

./: README.md
configs/safetab-h/NMFv5/: config.json  ethnicity-characteristic-iterations.txt  race-and-ethnicity-code-to-iteration.txt  race-and-ethnicity-codes.txt  race-characteristic-iterations.txt
mitre/: README.md
mitre/src/phsafe_safetab_reader/: cef_config.ini  cef_validator_classes.py  safetab_cef_config.ini  safetab_cef_config_2010.ini  safetab_h_cef_config_2010.ini  safetab_p_cef_reader.py
safetab-h/: README.md
safetab-h/mock_cef_reader/: PKG-INFO  README.md  setup.py
safetab-h/mock_cef_reader/phsafe_safetab_reader/: cef_reader.py  safetab_cef_reader.py
safetab-h/safetab_h/: CHANGELOG.md  README.md  TESTPLAN.md  requirements.txt
safetab-h/safetab_h/examples/: multi_run_error_report.sh  repo_zip.sh  run_safetab_h.sh  run_target_counts_h.sh  single_run_error_report_h.py  validate_input_safetab_h.sh
safetab-h/safetab_h/test/: __init__.py  conftest.py
safetab-h/safetab_h/test/system/: __init__.py  constants.py  test_accuracy_report.py  test_adaptivity.py  test_config_validation.py  test_correctness.py  test_input_validation.py  test_safetab_h_examples.py
safetab-h/safetab_h/test/unit/: __init__.py  test_accuracy_report.py  test_postprocessing.py
safetab-h/safetab_h/tmlt/safetab_h/: __init__.py  (+7 more)
safetab-h/safetab_utils/: CHANGELOG.md  PKG-INFO  README.md  TESTPLAN.md  setup.py
safetab-h/safetab_utils/test/: __init__.py  conftest.py
safetab-h/uscb/: Makefile  setup.py
tumult/core/: .gitignore  .gitlab-ci.yml  .pipeline_handlers  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  noxfile.py  pyproject.toml  test_requirements.txt
tumult/core/.circleci/: config.yml
tumult/core/.gitlab/issue_templates/: Default.md  release_template.md
tumult/core/.gitlab/merge_request_templates/: Default.md
tumult/core/benchmark/: benchmark_count_sum.py  benchmark_noise_mechanism.py  benchmark_private_join.py  benchmark_public_join.py  benchmark_quantile.py  benchmark_sparkflatmap.py  benchmark_sparkmap.py  benchmarking_utils.py
tumult/core/doc/: conf.py  index.rst  installation.rst  ref.bib  zcitations.rst
tumult/core/doc/_static/css/: custom.css
tumult/core/doc/_static/js/: version-banner.js
tumult/core/doc/_templates/: build-info.html  layout.html  package-name.html
tumult/core/doc/additional-resources/: index.rst  license.rst  privacy_policy.rst
tumult/core/doc/templates/python/: class.rst  module.rst
tumult/core/doc/topic-guides/: architecture.rst  index.rst  known-vulnerabilities.rst  privacy-guarantee.rst  real-numbers.rst  spark.rst  special-values.rst
tumult/core/doc/tutorials/: first-tutorial.rst  index.rst
tumult/core/ext/: build.py  build.sh  dependency_versions.sh
tumult/core/src/tmlt/core/: __init__.py  exceptions.py  measures.py  metrics.py
tumult/core/src/tmlt/core/domains/: __init__.py  base.py  collections.py  numpy_domains.py  pandas_domains.py  spark_domains.py
tumult/core/src/tmlt/core/measurements/: __init__.py  aggregations.py  base.py  chaining.py  composition.py  converters.py  interactive_measurements.py  noise_mechanisms.py  postprocess.py  spark_measurements.py
tumult/core/src/tmlt/core/measurements/pandas_measurements/: __init__.py  dataframe.py  series.py
tumult/core/src/tmlt/core/random/: __init__.py  continuous_gaussian.py  discrete_gaussian.py  inverse_cdf.py  laplace.py  rng.py  uniform.py
tumult/core/src/tmlt/core/transformations/: __init__.py  base.py  chaining.py  converters.py  dictionary.py  identity.py
tumult/core/src/tmlt/core/transformations/spark_transformations/: __init__.py  add_remove_keys.py  agg.py  filter.py  groupby.py  id.py  join.py  map.py  nan.py  partition.py  persist.py  rename.py  select.py  truncation.py
tumult/core/src/tmlt/core/utils/: __init__.py  arb.py  cleanup.py  configuration.py  distributions.py  exact_number.py  grouped_dataframe.py  join.py  misc.py  parameters.py  prdp.py  testing.py  truncation.py  type_utils.py  validation.py
tumult/core/test/: __init__.py  conftest.py
tumult/core/test/system/: __init__.py
tumult/core/test/system/measurements/: test_interactive_measurements.py
tumult/core/test/system/noise_distribution_tests/: __init__.py  test_average.py  test_base_mechanisms.py  test_count.py  test_count_distinct.py  test_quantile.py  test_samplers.py  test_standard_deviation.py  test_sum.py  test_variance.py
tumult/core/test/unit/: __init__.py  budget_abstract.py  measures_abstract.py  metric_abstract.py  test_measures.py  test_metrics.py
tumult/core/test/unit/domains/: __init__.py  abstract.py  test_base.py  test_collections.py  test_numpy_domains.py  test_pandas_domains.py  test_spark_domains.py
tumult/core/test/unit/measurements/: __init__.py  abstract.py  test_aggregations.py  test_chaining.py  test_composition.py  test_converters.py  test_interactive_measurements.py  test_noise_mechanisms.py  test_postprocess.py  test_spark_measurements.py
tumult/core/test/unit/measurements/pandas_measurements/: __init__.py  test_dataframe.py  test_series.py
tumult/core/test/unit/random/: __init__.py  test_continuous_gaussian.py  test_discrete_gaussian.py  test_inverse_cdf.py  test_laplace.py  test_rng.py  test_uniform.py
tumult/core/test/unit/transformations/: __init__.py  abstract.py  test_chaining.py  test_converters.py  test_dictionary.py  test_identity.py
tumult/core/test/unit/transformations/spark_transformations/: __init__.py  test_add_remove_keys.py  test_agg.py  test_filter.py  test_groupby.py  test_id.py  test_join.py  test_map.py  test_nan.py  test_partition.py  test_persist.py  test_rename.py  test_select.py  test_truncation.py
tumult/core/test/unit/utils/: __init__.py  test_arb.py  test_cleanup.py  test_configuration.py  test_distributions.py  test_exact_number.py  test_grouped_dataframe.py  test_join.py  test_misc.py  test_prdp.py  test_testing.py  test_truncation.py  test_type_utils.py
tumult/core/tutorials/: FirstSteps.ipynb  index.rst
uscb/ctools/: setup.cfg
uscb/ctools/tests/: emr_control_test.py
(+48 files in other folders)
